--- a/Playbook.yml
+++ b/Playbook.yml
@@ -14,4 +14,4 @@
   - name: building docker image
     command: docker build -t devopsedu/webapp image .
     args:
-    chdir: /opt/docker
+    chdir: /tmp/gitrepo
