--- a/Playbook.yml
+++ b/Playbook.yml
@@ -11,8 +11,8 @@
     yum: name=git state=present
   - name: clone the repo from github
     git: repo=https://github.com/Blessing-123/projCert.git dest=/tmp/gitrepo
-  - name: building docker image
-    command: docker build -t devopsedu/webapp image .
+  - name: pull a docker image
+    command: docker pull -t devopsedu/webapp image .
     args:
     chdir: /tmp/gitrepo
   - name: create container
