--- a/Playbook.yml
+++ b/Playbook.yml
@@ -12,4 +12,4 @@
   - name: clone the repo from github
     git: repo=https://github.com/Blessing-123/projCert.git dest=/tmp/gitrepo
   - name: create container
-    command: docker run -d --name devopsedu/webapp-container -p 8080:8080 devopsedu/webapp
+    command: docker run -d --name c1 -p 8080:8080 devopsedu/webapp
